--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   ],
   "scripts": {
     "test": "if [ \"${TRAVIS}\" ]; then npm run test-ci; else npm run test-local; fi",
-		"test-local": "tape \"./test/*.js\" | tap-spec",
-		"test-ci": "npm run test-local && xvfb-run npm run test-browsers",
-		"test-cov": "istanbul cover --dir ./reports/coverage --report lcov tape -- \"./test/*.js\"",
-		"test-browsers": "browserify ./test/*.js | testling | tap-spec",
-		"coverage": "istanbul cover --dir ./reports/codecov/coverage --report lcovonly tape -- \"./test/*.js\" && cat ./reports/codecov/coverage/lcov.info | codecov && rm -rf ./reports/codecov"
+    "test-local": "tape \"./test/*.js\" | tap-spec",
+    "test-ci": "npm run test-local && xvfb-run npm run test-browsers",
+    "test-cov": "istanbul cover --dir ./reports/coverage --report lcov tape -- \"./test/*.js\"",
+    "test-browsers": "browserify ./test/*.js | testling | tap-spec",
+    "coverage": "istanbul cover --dir ./reports/codecov/coverage --report lcovonly tape -- \"./test/*.js\" && cat ./reports/codecov/coverage/lcov.info | codecov && rm -rf ./reports/codecov"
   },
   "main": "./lib",
   "repository": {
@@ -26,32 +26,33 @@
     "url": "git://github.com/const-io/eps-float64.git"
   },
   "keywords": [
-		"const.io",
-		"const-io",
-		"constant",
-		"computation",
-		"compute",
-		"compute.io",
-		"compute-io",
-		"double",
-		"dbl",
-		"floating-point",
-		"float",
-		"ieee754",
-		"epsilon",
-		"eps",
-		"number"
-	],
+    "const.io",
+    "const-io",
+    "constant",
+    "computation",
+    "compute",
+    "compute.io",
+    "compute-io",
+    "double",
+    "dbl",
+    "floating-point",
+    "float",
+    "ieee754",
+    "epsilon",
+    "eps",
+    "number"
+  ],
   "bugs": {
     "url": "https://github.com/const-io/eps-float64/issues"
   },
   "dependencies": {},
   "devDependencies": {
     "browserify": "13.x.x",
-		"codecov": "1.x.x",
+    "codecov": "1.x.x",
     "istanbul": "^0.4.1",
     "jshint": "2.x.x",
     "jshint-stylish": "2.x.x",
+    "math-power": "^1.0.0",
     "tap-spec": "4.x.x",
     "tape": "4.x.x",
     "testling": "1.x.x"
